examples/test/testpolicy10693.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10693
  namespace: namespace226
spec:
  podSelector:
    matchLabels:
      key27: value8
      key38: value5
      key30: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value31
          key48: value17
      podSelector:
        matchLabels:
          key37: value13
          key22: value43
          key30: value22
